<resources>
    <string name="app_name">NfcConfig</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_header">NFC Config</string>
    <string name="main_menu_sub_header">choose configuration:</string>
    <string name="btn_add_config">Add Configuration</string>
    <string name="btn_edit_list">Edit List</string>
    <string name="add_config_dialog_header">Add Configuration</string>
    <string name="add_config_subheader_name">Enter name:</string>
    <string name="add_config_subheader_icon">Config Icon:</string>
    <string name="save">Save</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="action_set_sound">Choose sound mode:</string>
    <string name="set_sound_silent">silent</string>
    <string name="set_sound_cancel_silent">cancel silent mode</string>
    <string name="set_sound_vibrate">vibrate</string>
</resources>
