<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_config_dialog_bkgd">
    <LinearLayout
        android:id="@+id/linLay_add_config_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/add_config_dialog_header"
            android:textSize="22dp"
            android:textColor="@color/add_config_dialog_text"
            android:gravity="center_horizontal|center_vertical"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relLay_add_config_name"
        android:layout_below="@id/linLay_add_config_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/add_config_subheader_name"
            android:text="@string/add_config_subheader_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/add_config_dialog_text"/>
        <EditText
            android:id="@+id/edTxt_config_name"
            android:layout_below="@id/add_config_subheader_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/edTxt_add_config_name"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/relLay_add_config_icon"
        android:layout_below="@id/relLay_add_config_name"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:id="@+id/add_config_subheader_icon"
            android:text="@string/add_config_subheader_icon"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/add_config_dialog_text"/>
        <ImageView
            android:id="@+id/imgV_config_icon"
            android:layout_below="@id/add_config_subheader_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/edTxt_add_config_name"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/relLay_add_config_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_icon_choose"
            android:background="@color/add_config_btns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/choose_icon"
            android:textSize="16dp"
            android:textColor="@color/add_config_dialog_text"/>
        <Button
            android:id="@+id/btn_save"
            android:background="@color/add_config_btns"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="16dp"
            android:textColor="@color/add_config_dialog_text"/>
    </LinearLayout>
</RelativeLayout>