<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/main_menu_bkgd"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linLay_headers"
        android:layout_width="match_parent"
        android:layout_height="96dp">
        <TextView
            android:id="@+id/txtV_mainMenu_header"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="30dp"
            android:text="@string/main_menu_header"
            android:textColor="@color/menu_header"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:gravity="left"
            android:textSize="16dp"
            android:text="@string/main_menu_sub_header"
            android:textColor="@color/menu_header"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relLay_list"
        android:layout_below="@id/linLay_headers"
        android:layout_width="match_parent"
        android:layout_height="320dp">
        <ListView
            android:id="@+id/lstV_config_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/relLay_list"
        android:layout_width="match_parent"
        android:layout_height="72dp">
        <Button
            android:id="@+id/btn_add_config"
            android:background="@color/main_menu_btn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:text="@string/btn_add_config"
            android:textSize="14dp"
            android:textColor="@color/btn_edit_list_text"/>
        <Button
            android:id="@+id/btn_edit_list"
            android:background="@color/main_menu_btn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/btn_edit_list"
            android:textSize="14dp"
            android:textColor="@color/btn_edit_list_text"/>
    </LinearLayout>
</RelativeLayout>
